Name: pushme

Version:  2.0.0
Synopsis: Tool to synchronize multiple directories with rsync, zfs or git-annex

Description: Script I use for synchronizing my data among machines.

Homepage:           https://github.com/jwiegley/pushme
License:            BSD3
License-file:       LICENSE
Author:             John Wiegley
Maintainer:         John Wiegley <johnw@newartisans.com>
Category:           Development
Build-type:         Simple
Cabal-version:      >= 1.8

Extra-Source-Files: README.md

Executable pushme
    Main-is:       Main.hs
    Ghc-options:   -threaded

    Build-depends: base                 >= 4 && < 5
                 , aeson                >= 0.6.0
                 , bytestring           >= 0.9.2
                 , conduit
                 , conduit-combinators
                 , conduit-extra
                 , containers           >= 0.4.2
                 , io-storage           >= 0.3
                 , lens                 >= 2.8
                 , logging              >= 1.4
                 , monad-logger
                 , old-locale           >= 1.0.0
                 , optparse-applicative >= 0.5.2.1
                 , parallel-io          >= 0.3.2
                 , pretty-show
                 , regex-posix          >= 0.95
                 , safe
                 , shelly               >= 0.14.0.1
                 , system-fileio        >= 0.3.9
                 , system-filepath      >= 0.4.7
                 , text                 >= 0.11.2
                 , text-format          >= 0.3
                 , time                 >= 1.4
                 , transformers         >= 0.3.0.0
                 , unix                 >= 2.5.1
                 , unordered-containers >= 0.2.2
                 , yaml                 >= 0.8

Source-repository head
  type:     git
  location: https://github.com/jwiegley/pushme
