Name:           pushme
Version:        2.0.0
Synopsis:       Tool to synchronize directories with rsync, zfs or git-annex
Homepage:       https://github.com/jwiegley/pushme
License:        BSD3
License-file:   LICENSE
Author:         John Wiegley
Maintainer:     John Wiegley <johnw@newartisans.com>
Category:       Development
Build-type:     Simple
Cabal-version:  >= 1.8
Description:    Script I use for synchronizing my data among machines.

Extra-Source-Files: README.md

Executable pushme
    Main-is:     Main.hs
    Ghc-options: -threaded
    Build-depends:
        base                 >= 4.6.0.1
      , aeson                >= 0.7  && < 0.8
      , bytestring           >= 0.10 && < 0.11
      , conduit              >= 1.1  && < 1.2
      , conduit-combinators  >= 0.2  && < 0.5
      , conduit-extra        >= 1.1  && < 1.2
      , containers           >= 0.5  && < 0.6
      , io-storage           >= 0.3  && < 0.4
      , lens                 >= 4.1  && < 4.2
      , logging              >= 1.4  && < 1.5
      , monad-logger         >= 0.3  && < 0.4
      , old-locale           >= 1.0  && < 1.1
      , optparse-applicative >= 0.8  && < 1.0
      , parallel-io          >= 0.3  && < 0.4
      , regex-posix          >= 0.95 && < 1.0
      , safe                 >= 0.3  && < 0.4
      , shelly               >= 1.5  && < 1.6
      , system-fileio        >= 0.3  && < 0.4
      , system-filepath      >= 0.4  && < 0.5
      , temporary            >= 1.2  && < 1.3
      , text                 >= 0.11 && < 1.2
      , text-format          >= 0.3  && < 0.4
      , time                 >= 1.4  && < 1.5
      , transformers         >= 0.3  && < 0.4
      , unix                 >= 2.6  && < 2.8
      , unordered-containers >= 0.2  && < 0.3
      , yaml                 >= 0.8  && < 0.9

Source-repository head
  type:     git
  location: https://github.com/jwiegley/pushme
